# Copyright(C) 2023 Pedro Henrique Penna <pedrohenriquepenna@gmail.com>
# Licensed under the MIT license.

[workspace]
members = [
    "01-hello-world",
    "02-variables",
    "03-primitive-types",
    "04-tuples",
    "05-arrays",
    "06-flow-control",
    "07-functions",
    "08-memory-safety",
    "09-structures",
    "10-enumerations",
    "11-generics",
    "12-traits",
]
